<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    app:cardElevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    tools:context=".activities.login.RegisterActivity">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:autofillHints="Nama">

        </EditText>

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/username_icon"
            android:autofillHints="Password"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp" />

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/password_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username_icon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"
            android:autofillHints="Password Konfirmasi" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAlignment="center"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            style="@style/parent"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/sudah_punya_akun"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:textAlignment="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>